* libltdl/configure.ac (AM_INIT_AUTOMAKE): Bump libltdl version to 1.2. * libltdl/Makefile.am (libltdl_la_LDFLAGS):  Bump libtool library version info to 4:0:1.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2001-09-11  Gary V. Vaughan  <gary@gnu.org>
 
+	* libltdl/configure.ac (AM_INIT_AUTOMAKE): Bump libltdl version to
+	1.2.
+	* libltdl/Makefile.am (libltdl_la_LDFLAGS):  Bump libtool library
+	version info to 4:0:1.
+
+2001-09-11  Gary V. Vaughan  <gary@gnu.org>
+
 	* libtool.m4: No need to undefine([symbols]), proper quotation is
 	enough.
 
