--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,13 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+New in 1.4.3: 2001-??-??; CVS version 1.4.2a, ???:
+* The libltdl subdirectory now bootstraps correctly with Automake 1.5.
+* srcdir != builddir builds with Automake 1.5 work correctly.
+
 New in 1.4.2: 2001-09-11; CVS version 1.4.1a, Gary V. Vaughan:
 * libltdl now builds on solaris again
 * diagnose and warn about not-quite-working combinations of gcc and
-* ld on solaris
+  ld on solaris.
 * Improved OpenBSD support.
 * Improved cygwin support.
 * Bugfixes.
