--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-09-13  Gary V. Vaughan  <gary@gnu.org>
+
+	* ltdl.m4 (AC_CHECK_HEADERS): Check for assert.h.
+	* libltdl/ltdl.c:  If not, disable assertions manually.
+
 2001-09-11  Gary V. Vaughan  <gary@gnu.org>
 
 	* bootstrap: Be robust to having no files that need removing.
