--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+001-09-13  Assar Westerlund  <assar@sics.se>
+
+	* ltdl.m4 (AC_LTDL_DLLIB): call dlopen with arguments so the test
+	does not fail due to a prototype in dlfcn.h
+
 2001-09-13  Gary V. Vaughan  <gary@gnu.org>
 
 	* ltdl.m4 (AC_CHECK_HEADERS): Check for assert.h.
