--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2001-09-13  Gary V. Vaughan  <gary@gnu.org>
+
+	* ltmain.in (exec_cmd): Don't overquote or we end up with this:
+	$ libtool --mode=execute echo foo
+	"foo"
+	Reported by Rob Browning <rlb@defaultvalue.org>
+
 001-09-13  Assar Westerlund  <assar@sics.se>
 
 	* ltdl.m4 (AC_LTDL_DLLIB): call dlopen with arguments so the test
