--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2001-09-21  Gary V. Vaughan  <gary@gnu.org>
 
+	From Tor Lillqvist <tml@iki.fi>:
+	* ltmain.in [cygwin* mingw*]: Take care of the difference between
+	wrapper script name and executable name.
+
 	* libtool.m4 (archive_cmds) [darwin1.[0-2]]: Darwin uses zsh-3.1.6
 	for /bin/sh, and that shell does not handle escaped quotes
 	properly yet.
