--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-09-22  Tor Lillqvist  <tml@iki.fi>
+
+	* ltmain.in: Add a space to $base_compile in the case statement,
+	as the case labels checks for trailing spaces, but there aren't
+	necessarily in $base_compile.
+
 2001-09-22  Albert Chin-A-Young  <china@thewrittenword.com>
 
 	* libtool.m4: When setting archive_cmds for CC, don't
