--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-10-27  Gary V. Vaughan  <gary@gnu.org>
+
+	* ltdl.m4 (AC_WITH_LTDL): New macro to add `--with-included-ltdl'
+	option to configure, but to find an appropriate ltdl library and
+	append the right options to link it.
+
 2001-10-24 Kevin Ryde  <user42@zip.com.au>
 
 	*libtool.m4 (AC_LIBTOOL_PROG_LD_SHLIBS): Remove a stray ' quote.
