--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2001-11-15   Mo DeJong  <supermo@bayarea.net>
+
+	* ltmain.in: Place parens around a generated relink_command
+	so it is run is a subshell. This avoids an install error
+	where libtool ended up in the wrong directory after
+	relinking a .la file.
+
 2001-11-15  Guido Draheim <guidod@gmx.de>
 
 	* ltmain.in: Display better and different error messages when
