--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-15  Guido Draheim  <guidod-2001q3@gmx.de>
+
+	* ltdl.m4: Changed "underscode to underscore".
+
 2001-11-15  Gary V. Vaughan  <gary@gnu.org>
 
 	From Joseph S. Myers  <jsm28@cam.ac.uk>:
