--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-28  Gary V. Vaughan  <gary@gnu.org>
+
+	* libtoolize.in: The test for whether AC_PROG_LIBTOOL is defined
+	in aclocal.m4 had bitrotted slightly.
+	Reported by Takahiko Kawasaki <Takahiko_Kawasaki@cii.csk.co.jp>
+
 2001-11-27  Donald D. Anderson  <dda@sleepycat.com>
 
 	* ltmain.in: Treat freebsd like openbsd, in that -lc/-lc_r should
