--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -1063,6 +1063,15 @@ be executed by libtool.
 Display basic configuration options.  This provides a way for packages
 to determine whether shared or static libraries will be built.
 
+@item --preserve-dup-deps
+Do not remove duplicate dependencies in libraries.  When building packages
+with static libraries, the libraries may depend circularly on each other
+(shared libs can too, but for those it doesn't matter), so there are
+situations, where -la -lb -la is required, and the second -la may not be
+stripped or the link will fail.  In cases where these duplications are
+required, this option will preserve them, only stripping the libraries
+that libtool knows it can safely.
+
 @item --finish
 Same as @samp{--mode=finish}.
 
@@ -4106,10 +4115,10 @@ they are bundled with:
 @table @code
 @item aix3*
 @itemx aix4*
-AIX compilers have no PIC flags, since AIX has been ported only to
-PowerPC and RS/6000 chips. @footnote{All code compiled for the PowerPC
-and RS/6000 chips (@code{powerpc-*-*}, @code{powerpcle-*-*}, and
-@code{rs6000-*-*}) is position-independent, regardless of the operating
+Most AIX compilers have no PIC flags, since AIX (with the exception of
+AIX for IA-64) runs on PowerPC and RS/6000 chips. @footnote{All code compiled
+for the PowerPC and RS/6000 chips (@code{powerpc-*-*}, @code{powerpcle-*-*},
+and @code{rs6000-*-*}) is position-independent, regardless of the operating
 system or compiler suite.  So, ``regular objects'' can be used to build
 shared libraries on these systems and no special PIC compiler flags are
 required.}
@@ -4148,15 +4157,9 @@ Particularly, if a pair of static archives each resolve some of the
 other's symbols, it might be necessary to list one of those archives
 both before and after the other one.  Libtool does not currently cope
 with this situation well, since dupicate libraries are removed from
-thr link line.
-
-If you find yourself developing on a host that requires you to list
-libraries multiple times in order for it to generate correctly linked
-objects, you can defeat libtool's removal algorithm like this:
-
-@example
-$ libtool ... -lfoo -lbar -Wl,-lfoo
-@end example
+the link line by default.  Libtool provides the command line option
+@samp{--preserve-dup-deps} to preserve all duplicate dependencies
+in cases where it is necessary.
 
 @node Archivers
 @subsection Archivers
