--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2002-02-07  Alexandre Oliva  <aoliva@redhat.com>
+
+	Reverted incorrect patch:
+	2001-10-24  H.J. Lu  <hjl@gnu.org>
+	* ltmain.sh: Allow link against an archive when building a
+	shared library.
+	* libtool.m4 (lt_cv_deplibs_check_method): Always use
+	file_magic for Linux ELF.
+
 2002-01-30  Robert Boehne  <rboehne@ricardo-us.com>
 
 	* libtool.m4 (LT_AC_PROG_SED): Removed a mysterious newline.
