--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-02-25  Albert Chin-A-Young  <china@thewrittenword.com>
 
+	* ltmain.in: Quote $pic_mode.
+
+2002-02-25  Albert Chin-A-Young  <china@thewrittenword.com>
+
 	* ltmain.in: Fix version string under IRIX.
 
 2002-02-25  Albert Chin-A-Young  <china@thewrittenword.com>
